# recursive-llm

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_usage.py  custom_config.py  data_extraction.py  demo.py  long_document.py  multi_file.py  ollama_local.py  setup_env.py  two_models.py
examples/ja/: basic_usage_ja.py
src/rlm/: core.py  parser.py  prompts.py  repl.py  types.py
src/rlm_ja/: __init__.py  core.py  logger.py  prompts.py  repl.py
tests/: __init__.py  test_core.py  test_integration.py  test_parser.py  test_repl.py
